Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • intel intel
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Issues 757
    • Issues 757
    • List
    • Boards
    • Service Desk
    • Milestones
  • Analytics
    • Analytics
    • Value stream
  • Wiki
    • Wiki
  • Activity
  • Create a new issue
  • Issue Boards
Collapse sidebar
  • drm
  • intelintel
  • Issues
  • #2346
Closed
Open
Issue created Aug 13, 2020 by LAKSHMINARAYANA VUDUM@l4kshmiReporter

igt@kms_cursor_legacy@flip-vs-cursor - fail - Failed assertion: kmstest_get_vblank(display->drm_fd, pipe, 0) == vblank_start|Failed assertion: kmstest_get_vblank(display->drm_fd, pipe, 0) <= vblank_start + 1

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8881/shard-skl4/igt@kms_cursor_legacy@flip-vs-cursor-busy-crc-legacy.html

Starting subtest: flip-vs-cursor-busy-crc-legacy
(kms_cursor_legacy:1446) CRITICAL: Test assertion failure function flip_vs_cursor_busy_crc, file ../tests/kms_cursor_legacy.c:1342:
(kms_cursor_legacy:1446) CRITICAL: Failed assertion: kmstest_get_vblank(display->drm_fd, pipe, 0) == vblank_start
(kms_cursor_legacy:1446) CRITICAL: error: 1419 != 1416
Subtest flip-vs-cursor-busy-crc-legacy failed.
Edited Apr 15, 2022 by LAKSHMINARAYANA VUDUM
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking